<resources>
    <string name="app_name">Pitstop</string>
    <string name="refuel_main">Refuel Main</string>
    <string name="refuel_km">Descubra o posto mais próximo</string>
    <string name="refuel_price">Descubra o posto mais barato</string>
    <string name="refuel_main_browser_distance">Closest gas station</string>
    <string name="refuel_main_browser_price">Cheapest gas station</string>
    <string name="help">Help</string>
    <string name="refuel_main_contribute">Add or edit a gas station</string>
    <string name="refuel_main_map">Map</string>
    <string name="refuel_browser_route">ROUTE</string>
    <string name="refuel_browser_map">MAP</string>
    <string name="minus_price">- $</string>
    <string name="plus_price">+ $</string>
    <string name="refuel_browser_show_table">SHOW TABLE</string>
    <string name="no_description">none</string>
    <string name="introduction_text_help">Whenever you need help click the pitstop button at the main screen</string>
    <string name="introduction_text_intention">PITSTOP relies on contributions by its users to keep up to date information about the fuel prices and the gas stations.</string>
    <string name="introduction_text_contribute">Contribute. Whenever you find yourself at a gas station please update information about the prices and the service to help other users.</string>
    <string name="introduction_text_click_to_contribute">To contribute when you are in a gas station click the icon</string>
    <string name="contribute_main_hint1">Click on the price displayer to edit the price or to confirm it is correct</string>
    <string name="contribute_main_leaded_gasoline">Leaded gasoline</string>
    <string name="contribute_main_gasoline">Gasoline</string>
    <string name="contribute_main_alcohol">Alcohol</string>
    <string name="contribute_main_diesel">Diesel</string>
    <string name="contribute_main_natural_gas">Natural Gas</string>
    <string name="contribute_main_toast_submit">Submitted</string>
    <string name="universal_submit">SUBMIT</string>
    <string name="select_flag">Select the gas station flag</string>
    <string name="contribute_extra_info">Provide extra information about the gas station</string>
    <string name="contribute_extra_toast_submit">Submitted</string>
    <string name="contribute_extra_payment_methods_dialog_title">Payment methods</string>
    <string name="contribute_extra_convenience_store_dialog_title">Convenience store</string>
    <string name="contribute_extra_car_wash_dialog_title">Car-wash</string>
    <string name="contribute_extra_car_repair_dialog_title">Workshop</string>
    <string name="contribute_extra_restaurant_dialog_title">Restaurant</string>
    <string name="contribute_extra_business_hours_dialog_title">24h</string>
    <string name="contribute_extra_picture_dialog_title">Picture</string>
    <string name="contribute_extra_phone_dialog_title">Telephone</string>
    <string name="contribute_payment_methods">PAYMENT METHODS</string>
    <string name="contribute_convenience_store">CONVENIENCE STORE</string>
    <string name="contribute_car_wash">CAR-WASH</string>
    <string name="cotribute_car_repair">WORKSHOP</string>
    <string name="skip">next</string>
    <string name="add_gasstation_text_1">You are in:</string>
    <string name="add_gasstation_text_2">Confirme sua localização; clique no endereço para localizar o posto</string>
    <string name="add_gasstation_text_3">Atualmente não consta em nosso banco de dados nenhum posto de abastecimento neste endereço.</string>
    <string name="add_gasstation_text_4">Para criar uma nova entrada clique no ícone e confirme no mapa sua localização. Em seguida, selecione a bandeira do posto e forneça o preço de ao menos um combustível para concluir.</string>
    <string name="new_gasstation">NEW GAS STATION</string>
    <string name="payment_methods_money">Money</string>
    <string name="payment_methods_visa">Visa</string>
    <string name="payment_methods_master_card">Master Card</string>
    <string name="payment_methods_visa_electron">Visa Electron</string>
    <string name="payment_methods_american_express">American Express</string>
    <string name="payment_methods_check">Check</string>
    <string name="refuel_table_$">$</string>
    <string name="refuel_table_temp_1">km</string>
    <string name="refuel_table_min">min</string>
    <string name="refuel_table_update">update</string>
    <string name="refuel_get_route_hint1">Provide origin and destination to find gas stations avoiding detours</string>
    <string name="refuel_get_route_hint2">Origin:</string>
    <string name="refuel_get_route_hint3">Destination:</string>
    <string name="refuel_get_route_destination">Insert destination here</string>
    <string name="refuel_get_route_hint4">Click on the addresses to change them</string>
    <string name="refuel_get_route_submit">SEE ROUTE</string>
    <string name="workshop_main_flex_calculator">Flex Calculator</string>
    <string name="workshop_main_settings">Settings</string>
    <string name="contribute_rating_hint">Rate the gas station</string>
    <string name="contribute_rating_quality">Quality</string>
    <string name="contribute_rating_speed">Quickness</string>
    <string name="contribute_rating_treatment">Treatment</string>
    <string name="contribute_rating_submit">RATE</string>
    <string name="contribute_rating_toast_submit">Submitted</string>
    <string name="contribute_comment_hint1">Comment your last experience in the gas station</string>
    <string name="contribute_comment_hint2">Write your comment here</string>
    <string name="contribute_comment_hint3">That was the average rating:</string>
    <string name="contribute_comment_submit">SUBMIT</string>
    <string name="contribute_comment_toast_submit">Submitted</string>
    <string name="workshop_flex_calculator_hint1">Click on the prices to change them and click on the percentage to provide the difference in fuel consumption between alcohol and gasoline for your vehicle (the average is 30%)</string>
    <string name="workshop_flex_calculator_alcohol_price">$alcohol</string>
    <string name="workshop_flex_calculator_gasoline_price">$gasoline</string>
    <string name="workshop_flex_calculator_hint2">Difference in consumption</string>
    <string name="workshop_flex_calculator_calculate">CALCULATE</string>
    <string name="workshop_flex_calculator_hint3">The difference in the fuel prices is:</string>
    <string name="workshop_flex_calculator_hint4">refuel with</string>
    <string name="refuel_gasstation_gasoline">Gasoline</string>
    <string name="refuel_gasstation_leaded_gasoline">Leaded Gasoline</string>
    <string name="refuel_gasstation_alcohol">Alcohol</string>
    <string name="refuel_gasstation_diesel">Diesel</string>
    <string name="refuel_gasstation_natural_gas">Natural Gas</string>
    <string name="refuel_gasstation_flex">Flex: price difference is </string>
    <string name="refuel_gasstation_hint">Refuel with</string>
    <string name="refuel_gasstation_business_hours">24 hours</string>
    <string name="refuel_gasstation_separator">" | "</string>
    <string name="refuel_gasstation_hint2">"Payment methods: "</string>
    <string name="refuel_gasstation_delete">DELETE</string>
    <string name="refuel_gasstation_edit">EDIT</string>
    <string name="refuel_gasstation_pictures">PICTURES</string>
    <string name="refuel_gasstation_comment_label">COMMENTS</string>
	<string name="EXTRA_SORTER">com.sumbioun.android.pitstop.SORTER</string>
	<string name="EXTRA_REFUELMAIN_LATITUDE">com.sumbioun.android.pitstop.refuel.refuelmain.LATITUDE</string>
	<string name="EXTRA_REFUELMAIN_LONGITUDE">com.sumbioun.android.pitstop.refuel.refuelmain.LONGITUDE</string>
	<string name="EXTRA_REFUELMAIN_GASSTATION">com.sumbioun.android.pitstop.refuel.refuelmain.GASSTATION</string>
	<string name="EXTRA_CONTRIBUTEMAIN_ID">com.sumbioun.android.pitstop.contribute.contributemain.ID</string>
	<string name="EXTRA_CONTRIBUTEMAIN_LATITUDE">com.sumbioun.android.pitstop.contribute.contributemain.LATITUDE</string>
	<string name="EXTRA_CONTRIBUTEMAIN_LONGITUDE">com.sumbioun.android.pitstop.contribute.contributemain.LONGITUDE</string>
	<string name="EXTRA_CONTRIBUTENEW_LATITUDE">com.sumbioun.android.pitstop.contribute.contributenew.LATITUDE</string>
	<string name="EXTRA_CONTRIBUTENEW_LONGITUDE">com.sumbioun.android.pitstop.contribute.contributenew.LONGITUDE</string>
	<string name="EXTRA_CONTRIBUTEEXTRA_ID">com.sumbioun.android.pitstop.contribute.contributenew.LONGITUDE</string>
	<string name="EXTRA_CONTRIBUTEEXTRA_GASSTATION">com.sumbioun.android.pitstop.contribute.contributeextra.GASSTATION</string>
	<string name="EXTRA_CONTRIBUTEEXTRA_ADDRESS">com.sumbioun.android.pitstop.contribute.contributeextra.ADDRESS</string>
	<string name="EXTRA_CONTRIBUTERATING_GASSTATION">com.sumbioun.android.pitstop.contribute.contributerating.GASSTATION</string>
	<string name="EXTRA_CONTRIBUTERATING_ADDRESS">com.sumbioun.android.pitstop.contribute.contributerating.ADDRESS</string>
	<string name="EXTRA_CONTRIBUTECOMMENT_ADDRESS">com.sumbioun.android.pitstop.contribute.contributecomment.ADDRESS</string>
	<string name="EXTRA_CONTRIBUTECOMMENT_GASSTATION">com.sumbioun.android.pitstop.contribute.contributecomment.GASSTATION</string>
	<string name="EXTRA_CONTRIBUTECOMMENT_RATING">com.sumbioun.android.pitstop.contribute.contributecomment.RATING</string>
	<string name="EXTRA_REFUELGASSTATION_ID">com.sumbioun.android.pitstop.contribute.refuelgasstation.ID</string>
	<string name="pref_language">Language</string>
	<string name="pref_language_default">EN</string>
	<string name="pref_unit_of_measurement">Unit of measurement</string>
	<string name="pref_unit_of_measurement_default">KM</string>
	<string name="pref_fuel_type">Default Fuel</string>
	<string name="pref_fuel_type_default">GASOLINE</string>
	<string name="pref_radius">Default radius</string>
	<string name="pref_radius_default">10</string>
	<string name="pref_results_table">Maximum table results</string>
	<string name="pref_results_table_default">10</string>
	<string name="refuel_browser_fragment_noentry_contribute">There are no gas stations nearby. Click here to expand the search radius.</string>
	<string name="refuel_browser_label_less_distance">-km</string>
	<string name="refuel_browser_label_more_distance">+km</string>
	<string name="refuel_browser_label_less_price">-$</string>
	<string name="refuel_browser_label_more_price">+$</string>
	<string name="quick_settings_radius_dialog_title">Search radius</string>
	<string name="universal_next">Next</string>
	<string name="MapConfirmLocation_Help">To edit an existing gas station, click on the markers. Or click on CREATE GAS STATION. </string>
	<string name="MapConfirmLocation_HelpCreateGasstation">Click on a location to create a gas station marker</string>
	<string name="MapConfirmLocation_HelpRepositionMarker">Long click the marker to drag it</string>
	<string name="MapConfirmLocation_Confirm">CONFIRM</string>
	<string name="refuelMain_help">Slide the screen sideways to access other app tools</string>
	<string name="refuelMain_showTooltips">Keep showing tooltips?</string>
	<string name="garage_main_help">Add a car to keep track of odometer entries</string>
	<string name="garage_refuellings_help">Odometer entries</string>
	<string name="refuel_gasstation_loading_gas_data">Fetching gas station&#8230;</string>
	<string name="refuel_gasstation_loading_pictures">Fetching pictures&#8230;</string>
	<string name="refuel_gasstation_delete_confirmation">Are you sure you want to delete this gas station?</string>
	<string name="refuel_gasstation_deleting_gasstation">Deleting gasstation&#8230;</string>
	<string name="contribute_main_loading_data">Getting data&#8230;</string>
	<string name="contribute_main_gas_deleted">This gas station was deleted from the database.</string>
	<string name="contribute_main_confirm_price">Confirm at least one price to go further.</string>
</resources>