<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_money" />

    <CheckBox
        android:id="@+id/visa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_visa" />
    
    <CheckBox
        android:id="@+id/master_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_master_card" />
    
    <CheckBox
        android:id="@+id/visa_electron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_visa_electron" />
    
    <CheckBox
        android:id="@+id/amex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_american_express" />
    
    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_methods_check" />

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="OK" />

</LinearLayout>